draft-ietf-mext-rfc3775bis-13

--- a/draft-ietf-mext-rfc3775bis-13.html
+++ b/draft-ietf-mext-rfc3775bis-13.html
@@ -505,6 +505,7 @@
 <link href="#rfc.section.15.7" rel="Chapter" title="15.7 Tunneling via the Home Agent">
 <link href="#rfc.section.15.8" rel="Chapter" title="15.8 Home Address Option">
 <link href="#rfc.section.15.9" rel="Chapter" title="15.9 Type 2 Routing Header">
+<link href="#rfc.section.15.10" rel="Chapter" title="15.10 SHA-1 Secure Enough for Mobile IPv6 Control Messages">
 <link href="#rfc.section.16" rel="Chapter" title="16 Contributors">
 <link href="#rfc.section.17" rel="Chapter" title="17 Acknowledgements">
 <link href="#rfc.references" rel="Chapter" title="18 References">
@@ -563,7 +564,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">Feb 08, 2011</td>
+<td class="right">Mar 11, 2011</td>
 </tr>
 
     	
@@ -571,7 +572,7 @@
   </table>
 
   <p class="title">Mobility Support in IPv6<br />
-  <span class="filename">draft-ietf-mext-rfc3775bis-12.txt</span></p>
+  <span class="filename">draft-ietf-mext-rfc3775bis-13.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies Mobile IPv6, a protocol which allows nodes to remain reachable while moving around in the IPv6 Internet.  Each mobile node is always identified by its home address, regardless of its current point of attachment to the Internet.  While situated away from its home, a mobile node is also associated with a care-of address, which provides information about the mobile node's current location.  IPv6 packets addressed to a mobile node's home address are transparently routed to its care-of address.  The protocol enables IPv6 nodes to cache the binding of a mobile node's home address with its care-of address, and to then send any packets destined for the mobile node directly to it at this care-of address.  To support this operation, Mobile IPv6 defines a new IPv6 protocol and a new destination option. All IPv6 nodes, whether mobile or stationary, can communicate with mobile nodes.  This document obsoletes RFC 3775.  </p>
@@ -897,6 +898,8 @@
 </li>
 <li>15.9.   <a href="#rfc.section.15.9">Type 2 Routing Header</a>
 </li>
+<li>15.10.   <a href="#rfc.section.15.10">SHA-1 Secure Enough for Mobile IPv6 Control Messages</a>
+</li>
 <li>16.   <a href="#rfc.section.16">Contributors</a>
 </li>
 <li>17.   <a href="#rfc.section.17">Acknowledgements</a>
@@ -1023,8 +1026,9 @@
 <p id="rfc.section.5.2.3.p.2">The mobile node should set the home init or care-of init cookie to a newly generated random number in every Home or Care-of Test Init message it sends.  The cookies are used to verify that the Home Test or Care-of Test message matches the Home Test Init or Care-of Test Init message, respectively.  These cookies also serve to ensure that parties who have not seen the request cannot spoof responses.  </p>
 <p id="rfc.section.5.2.3.p.3">Home and care-of keygen tokens are produced by the correspondent node based on its currently active secret key (Kcn) and nonces, as well as the home or care-of address (respectively).  A keygen token is valid as long as both the secret key (Kcn) and the nonce used to create it are valid.  </p>
 <h1 id="rfc.section.5.2.4">
-<a href="#rfc.section.5.2.4">5.2.4.</a> Cryptographic Functions</h1>
-<p id="rfc.section.5.2.4.p.1">By default in this specification, the function used to compute hash values is <a href="#FIPS.180-1.1995">SHA1</a> <cite title="NONE">[FIPS.180-1.1995]</cite>.  Message Authentication Codes (MACs) are then computed using <a href="#RFC2104">HMAC_SHA1</a> <cite title="NONE">[RFC2104]</cite><a href="#FIPS.180-1.1995">[FIPS.180-1.1995]</a>.  HMAC_SHA1(K,m) denotes such a MAC computed on message m with key K.  </p>
+<a href="#rfc.section.5.2.4">5.2.4.</a> <a href="#sha1" id="sha1">Cryptographic Functions</a>
+</h1>
+<p id="rfc.section.5.2.4.p.1">By default in this specification, the function used to compute hash values is <a href="#FIPS.180-1.1995">SHA-1</a> <cite title="NONE">[FIPS.180-1.1995]</cite>, which is considered to offer sufficient protection for Mobile IPv6 control messages (see <a href="#seccons:sha1">Section 15.10</a>).  Message Authentication Codes (MACs) are then computed using <a href="#RFC2104">HMAC_SHA1</a> <cite title="NONE">[RFC2104]</cite><a href="#FIPS.180-1.1995">[FIPS.180-1.1995]</a>.  HMAC_SHA1(K,m) denotes such a MAC computed on message m with key K.  </p>
 <h1 id="rfc.section.5.2.5">
 <a href="#rfc.section.5.2.5">5.2.5.</a> <a href="#rrp" id="rrp">Return Routability Procedure</a>
 </h1>
@@ -1052,12 +1056,12 @@
 <p id="rfc.section.5.2.5.p.5">When the mobile node has received both the Home and Care-of Test messages, the return routability procedure is complete.  As a result of the procedure, the mobile node has the data it needs to send a Binding Update to the correspondent node.  The mobile node hashes the tokens together to form a 20 octet binding key Kbm: </p>
 <div id="#rfc.figure.2"></div>
 <pre>
-    Kbm = SHA1 (home keygen token | care-of keygen token)
+    Kbm = SHA-1 (home keygen token | care-of keygen token)
 </pre>
 <p id="rfc.section.5.2.5.p.6">A Binding Update may also be used to delete a previously established binding (<a href="#bind-upd">Section 6.1.7</a>). In this case, the care-of keygen token is not used. Instead, the binding management key is generated as follows: </p>
 <div id="#rfc.figure.3"></div>
 <pre>
-    Kbm = SHA1(home keygen token)
+    Kbm = SHA-1(home keygen token)
 </pre>
 <p id="rfc.section.5.2.5.p.7">Note that the correspondent node does not create any state specific to the mobile node, until it receives the Binding Update from that mobile node.  The correspondent node does not maintain the value for the binding management key Kbm; it creates Kbm when given the nonce indices and the mobile node's addresses.  </p>
 <h1 id="rfc.section.5.2.6">
@@ -2354,6 +2358,10 @@
 <p id="rfc.section.15.9.p.2">Generally, source routing has a number of security concerns. These include the automatic reversal of unauthenticated source routes (which is an issue for IPv4, but not for IPv6). Another concern is the ability to use source routing to "jump" between nodes inside, as well as outside a firewall. These security concerns are not issues in Mobile IPv6, due to the rules mentioned above.  </p>
 <p id="rfc.section.15.9.p.3">In essence the semantics of the type 2 routing header is the same as a special form of IP-in-IP tunneling where the inner and outer source addresses are the same.  </p>
 <p id="rfc.section.15.9.p.4">This implies that a device which implements the filtering of packets should be able to distinguish between a type 2 routing header and other routing headers, as required in <a href="#req:routers">Section 8.3</a>.  This is necessary in order to allow Mobile IPv6 traffic while still having the option of filtering out other uses of routing headers.  </p>
+<h1 id="rfc.section.15.10">
+<a href="#rfc.section.15.10">15.10.</a> <a href="#seccons:sha1" id="seccons:sha1">SHA-1 Secure Enough for Mobile IPv6 Control Messages</a>
+</h1>
+<p id="rfc.section.15.10.p.1">This document relies on hash-based message authentication codes (HMAC) computed using the <a href="#FIPS.180-1.1995">SHA-1</a> <cite title="NONE">[FIPS.180-1.1995]</cite> hash algorithm for the home keygen token, care-of keygen token, as well as the authentication fields in the binding update and binding authorization data (see <a href="#sha1">Section 5.2.4</a>).  While SHA-1 has been deprecated for some cryptographic mechanisms, SHA-1 is considered secure for the foreseeable future when used as specified here.  For additional details, see <a href="#I-D.turner-sha0-sha1-seccon">[I-D.turner-sha0-sha1-seccon]</a>.  </p>
 <h1 id="rfc.section.16">
 <a href="#rfc.section.16">16.</a> Contributors</h1>
 <p id="rfc.section.16.p.1">Work done by Tuomas Aura, Mike Roe, Greg O'Shea, Pekka Nikander, Erik Nordmark, and Michael Thomas shaped the return routability protocols described in <a href="#I-D.roe-mobileip-updateauth">[I-D.roe-mobileip-updateauth]</a>.  </p>
@@ -2559,30 +2567,35 @@
 <tr>
 <td class="reference"><b id="14">[14]</b></td>
 <td class="top">
-<a>Manner, J.</a> and <a>M. Kojo</a>, "<a href="http://tools.ietf.org/html/rfc3753">Mobility Related Terminology</a>", RFC 3753, June 2004.</td>
+<a>Polk, T</a>, <a>Chen, L</a>, <a>Turner, S</a> and <a>P Hoffman</a>, "<a href="http://tools.ietf.org/html/draft-turner-sha0-sha1-seccon-05">Security Considerations for the SHA-0 and SHA-1 Message-Digest Algorithms</a>", Internet-Draft draft-turner-sha0-sha1-seccon-05, February 2011.</td>
 </tr>
 <tr>
 <td class="reference"><b id="15">[15]</b></td>
 <td class="top">
-<a>Vida, R.</a> and <a>L. Costa</a>, "<a href="http://tools.ietf.org/html/rfc3810">Multicast Listener Discovery Version 2 (MLDv2) for IPv6</a>", RFC 3810, June 2004.</td>
+<a>Manner, J.</a> and <a>M. Kojo</a>, "<a href="http://tools.ietf.org/html/rfc3753">Mobility Related Terminology</a>", RFC 3753, June 2004.</td>
 </tr>
 <tr>
 <td class="reference"><b id="16">[16]</b></td>
 <td class="top">
-<a>Bellovin, S.</a> and <a>R. Housley</a>, "<a href="http://tools.ietf.org/html/rfc4107">Guidelines for Cryptographic Key Management</a>", BCP 107, RFC 4107, June 2005.</td>
+<a>Vida, R.</a> and <a>L. Costa</a>, "<a href="http://tools.ietf.org/html/rfc3810">Multicast Listener Discovery Version 2 (MLDv2) for IPv6</a>", RFC 3810, June 2004.</td>
 </tr>
 <tr>
 <td class="reference"><b id="17">[17]</b></td>
 <td class="top">
-<a>Nikander, P.</a>, <a>Arkko, J.</a>, <a>Aura, T.</a>, <a>Montenegro, G.</a> and <a>E. Nordmark</a>, "<a href="http://tools.ietf.org/html/rfc4225">Mobile IP Version 6 Route Optimization Security Design Background</a>", RFC 4225, December 2005.</td>
+<a>Bellovin, S.</a> and <a>R. Housley</a>, "<a href="http://tools.ietf.org/html/rfc4107">Guidelines for Cryptographic Key Management</a>", BCP 107, RFC 4107, June 2005.</td>
 </tr>
 <tr>
 <td class="reference"><b id="18">[18]</b></td>
 <td class="top">
-<a>Nordmark, E.</a>, <a>Chakrabarti, S.</a> and <a>J. Laganier</a>, "<a href="http://tools.ietf.org/html/rfc5014">IPv6 Socket API for Source Address Selection</a>", RFC 5014, September 2007.</td>
+<a>Nikander, P.</a>, <a>Arkko, J.</a>, <a>Aura, T.</a>, <a>Montenegro, G.</a> and <a>E. Nordmark</a>, "<a href="http://tools.ietf.org/html/rfc4225">Mobile IP Version 6 Route Optimization Security Design Background</a>", RFC 4225, December 2005.</td>
 </tr>
 <tr>
 <td class="reference"><b id="19">[19]</b></td>
+<td class="top">
+<a>Nordmark, E.</a>, <a>Chakrabarti, S.</a> and <a>J. Laganier</a>, "<a href="http://tools.ietf.org/html/rfc5014">IPv6 Socket API for Source Address Selection</a>", RFC 5014, September 2007.</td>
+</tr>
+<tr>
+<td class="reference"><b id="20">[20]</b></td>
 <td class="top">
 <a>Abley, J.</a>, <a>Savola, P.</a> and <a>G. Neville-Neil</a>, "<a href="http://tools.ietf.org/html/rfc5095">Deprecation of Type 0 Routing Headers in IPv6</a>", RFC 5095, December 2007.</td>
 </tr>
@@ -2609,7 +2622,7 @@
 <h1 id="rfc.appendix.Appendix B">
 <a href="#rfc.appendix.Appendix%20B">Appendix B.</a> <a href="#changes" id="changes">Changes since RFC 3775</a>
 </h1>
-<p id="rfc.section.Appendix B.p.1">The following issues were identified during the evolution of the current document.  Discussion about the issues can be found on the [mext] working group page http://trac.tools.ietf.org/wg/mext/trac/report/6 </p>
+<p id="rfc.section.Appendix B.p.1">The following issues were identified during the evolution of the current document.  Discussion about most of the issues can be found on the [mext] working group page http://trac.tools.ietf.org/wg/mext/trac/report/6 </p>
 <h1 id="rfc.authors"><a href="#rfc.authors">Authors' Addresses</a></h1>
 <div class="avoidbreak">
   <address class="vcard">
