draft-schaad-smime-hash-experiment-06

--- a/draft-schaad-smime-hash-experiment-06.html
+++ b/draft-schaad-smime-hash-experiment-06.html
@@ -152,10 +152,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">J. Schaad</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Soaring Hawk Consulting</td></tr>
-<tr><td class="header">Intended status: Experimental</td><td class="header">January 21, 2011</td></tr>
-<tr><td class="header">Expires: July 25, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Experimental</td><td class="header">January 25, 2011</td></tr>
+<tr><td class="header">Expires: July 29, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />Experiment: Hash functions with parameters in CMS and S/MIME<br />draft-schaad-smime-hash-experiment-05</h1>
+<h1><br />Experiment: Hash functions with parameters in CMS and S/MIME<br />draft-schaad-smime-hash-experiment-06</h1>
 
 <h3>Abstract</h3>
 
@@ -176,7 +176,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on July 25, 2011.</p>
+This Internet-Draft will expire on July 29, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -372,10 +372,11 @@ MIME handling</h3>
 An example content-type string that has been fragmented is:
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 Content-Type: multipart/signed;
-  protocol="application/pkcs7-signature"; micalg*0="sha1, xor-md5:04"
-  micalg*1="400102030405060708090a0b0c0d0e0f001112131415161718191a1b1"
-  micalg*1="c1d1e1f102122232425262728292a2b2c2d2e2f203132333435363738"
-  micalg*2="393a3b3c3d3e3f30";  boundary=boundar42
+  protocol="application/pkcs7-signature";
+  micalg*0="sha1, xor-md5:04400102030405060708090a0b0c0d0e0f0011";
+  micalg*1="12131415161718191a1b1c1d1e1f102122232425262728292a2b";
+  micalg*2="2c2d2e2f203132333435363738";
+  micalg*3="393a3b3c3d3e3f30";  boundary=boundar42
 </pre></div>
 <p>Arguments could be made that the string should be base64 encoded rather than hex encoding the string.  The advantage is that the resulting encoding is shorter.  This could be significant if there are a substantial number of parameters and of a substantial size.  Even with the above example we needed to break the encoding across multiple lines.  The downside would be the requirement that the micalg parameter always be quoted.
 </p>
@@ -466,9 +467,9 @@ Message-Id: &lt;34567809323489fd.esc@example.com&gt;
 Date: Wed, 16 Dec 2010 23:13:00 -0500
 Content-Type: application/pkcs7-mime; smime-type=signed-data;
   name=smime.p7m;
-  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10"
-  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c2d2e"
-  micalg*2="2f30313233435363738393a3b3c3d3e3f40"
+  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10";
+  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c";
+  micalg*2="2d2e2f30313233435363738393a3b3c3d3e3f40"
 Content-Transfer-Encoding: base64
 Content-Disposition: attachment; filename=smime.p7m
 
@@ -538,8 +539,8 @@ Subject: MD5-XOR signing example
 Message-Id: &lt;091218002550300.249@example.com&gt;
 Date: Fri, 18 Dec 2010 00:25:21 -0300
 Content-Type: multipart/signed;
-  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10"
-  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c2d2e"
+  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10";
+  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c2d2e";
   micalg*2="2f30313233435363738393a3b3c3d3e3f40";
     boundary="----=_NextBoundry____Fri,_18_Dec_2009_00:25:21";
     protocol="application/pkcs7-signature"
@@ -595,8 +596,8 @@ Message-Id: &lt;34567809323489fd.esc@example.com&gt;
 Date: Wed, 16 Dec 2010 23:13:00 -0500
 Content-Type: application/pkcs7-mime; smime-type=authenticated-data;
   name=smime.p7m;
-  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10"
-  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c2d2e"
+  micalg*0="xor-md5: 0440010203405060708090a0b0c0d0e0f10";
+  micalg*1="111213415161718191a1b1c1d1e1f20212223425262728292a2b2c2d2e";
   micalg*2="2f30313233435363738393a3b3c3d3e3f40"
 Content-Transfer-Encoding: base64
 Content-Disposition: attachment; filename=smime.p7m
