draft-ietf-yam-rfc1652bis-03

--- a/draft-ietf-yam-rfc1652bis-03.html
+++ b/draft-ietf-yam-rfc1652bis-03.html
@@ -162,7 +162,7 @@
 <tr><td class="header">&nbsp;</td><td class="header">April 30, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />SMTP Service Extension for 8-bit MIME
-         Transport<br />draft-ietf-yam-rfc1652bis-02</h1>
+         Transport<br />draft-ietf-yam-rfc1652bis-03</h1>
 
 <h3>Abstract</h3>
 
@@ -210,7 +210,7 @@ Introduction</h3>
             have been requested by parts of the Internet community. In
             particular, a significant portion of the Internet community wishes
             to exchange messages in which the content body consists of a MIME
-            message <a class='info' href='#RFC2045'>[RFC2045]<span> (</span><span class='info'>Freed, N. and N. Borenstein, &ldquo;Multipurpose Internet Mail                   Extensions (MIME) Part One: Format of Internet Message                   Bodies,&rdquo; November&nbsp;1996.</span><span>)</span></a><a class='info' href='#RFC2046'>[RFC2046]<span> (</span><span class='info'>Freed, N. and N. Borenstein, &ldquo;Multipurpose Internet Mail Extensions                   (MIME) Part Two: Media Types,&rdquo; November&nbsp;1996.</span><span>)</span></a> containing arbitrary octet-aligned material.
+            message <a class='info' href='#RFC2045'>[RFC2045]<span> (</span><span class='info'>Freed, N. and N. Borenstein, &ldquo;Multipurpose Internet Mail                   Extensions (MIME) Part One: Format of Internet Message                   Bodies,&rdquo; November&nbsp;1996.</span><span>)</span></a><a class='info' href='#RFC2046'>[RFC2046]<span> (</span><span class='info'>Freed, N. and N. Borenstein, &ldquo;Multipurpose Internet Mail Extensions                   (MIME) Part Two: Media Types,&rdquo; November&nbsp;1996.</span><span>)</span></a><a class='info' href='#RFC5322'>[RFC5322]<span> (</span><span class='info'>Resnick, P., Ed., &ldquo;Internet Message Format,&rdquo; October&nbsp;2008.</span><span>)</span></a> containing arbitrary octet-aligned material.
             This memo uses the mechanism described in <a class='info' href='#RFC5321'>[RFC5321]<span> (</span><span class='info'>Klensin, J., &ldquo;Simple Mail Transfer Protocol,&rdquo; October&nbsp;2008.</span><span>)</span></a> to define an extension to the SMTP service
             whereby such contents may be exchanged. Note that this extension
             does NOT eliminate the possibility of an SMTP server limiting line
@@ -366,16 +366,16 @@ IANA Considerations</h3>
 <a name="rfc.section.6.1"></a><h3>6.1.&nbsp;
 SMTP service extension registration</h3>
 
-<p>This document defines an SMTP and Submit service extension, and IANA is
-               asked to update the 8BITMIME entry in the SMTP Service Extensions
-               registry, as follows: </p>
+<p>This document defines an SMTP and Submit service extension, and
+               IANA is asked to update the 8BITMIME entry in the SMTP Service
+               Extensions registry, as follows: </p>
 <blockquote class="text"><dl>
 <dt>Keyword: </dt>
 <dd>8BITMIME
 </dd>
 <dt>Description: </dt>
-<dd>SMTP and Submit transport of 8bit MIME
-                     content 
+<dd>SMTP and Submit transport of 8bit
+                     MIME content 
 </dd>
 <dt>Reference: </dt>
 <dd>[[IANA: Insert this RFC
