--- a/draft-ietf-martini-reqs-08.html
+++ b/draft-ietf-martini-reqs-08.html
@@ -154,10 +154,10 @@
 <tr><td class="header">MARTINI WG</td><td class="header">J. Elwell</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Siemens Enterprise Communications</td></tr>
 <tr><td class="header">Intended status:  Informational</td><td class="header">H. Kaplan</td></tr>
-<tr><td class="header">Expires:  November 13, 2010</td><td class="header">Acme Packet</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">May 12, 2010</td></tr>
+<tr><td class="header">Expires:  December 30, 2010</td><td class="header">Acme Packet</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 28, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Requirements for multiple address of record (AOR) reachability information in the Session Initiation Protocol (SIP)<br />draft-ietf-martini-reqs-07.txt</h1>
+<h1><br />Requirements for multiple address of record (AOR) reachability information in the Session Initiation Protocol (SIP)<br />draft-ietf-martini-reqs-08.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -180,7 +180,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on November 13, 2010.</p>
+This Internet-Draft will expire on December 30, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -379,9 +379,9 @@ Requirements</h3>
 </p>
 <p>REQ3 - The mechanism MUST allow a SIP-PBX to register reachability information with its SSP, in order to enable the SSP to route to the SIP-PBX inbound requests targeted at assigned telephone numbers.
 </p>
-<p>REQ4 - The mechanism MUST NOT prevent UAs attached to a SIP-PBX registering with the SIP-PBX for AORs based on assigned telephone numbers, in order to receive requests targeted at those telephone numbers, without needing to involve the SSP in the registration process.
+<p>REQ4 - The mechanism MUST allow UAs attached to a SIP-PBX to register with the SIP-PBX for AORs based on assigned telephone numbers, in order to receive requests targeted at those telephone numbers, without needing to involve the SSP in the registration process.
 </p>
-<p>REQ5 - The mechanism MUST allow a SIP-PBX to handle internally requests originating at its own UAs and targeted at its assigned telephone numbers, without routing those requests to the SSP.
+<p>REQ5 - The mechanism MUST allow a SIP-PBX to handle requests originating at its own UAs and targeted at its assigned telephone numbers, without routing those requests to the SSP.
 </p>
 <p>REQ6 - The mechanism MUST allow a SIP-PBX to receive requests to its assigned telephone numbers originating outside the SIP-PBX and arriving via the SSP, so that the SIP-PBX can route those requests onwards to its UAs, as it would for internal requests to those telephone numbers.
 </p>
@@ -414,9 +414,9 @@ Requirements</h3>
 </p>
 <p>REQ13 - For a given SIP-PBX and its SSP, there MUST be no impact on other domains, which are expected to be able to use normal RFC 3263 procedures to route requests, including requests needing to be routed via the SSP in order to reach the SIP-PBX.
 </p>
-<p>REQ14 - The mechanism MUST be able to operate over a transport that provides integrity protection and confidentiality.
+<p>REQ14 - The mechanism MUST be able to operate over a transport that provides end-to-end integrity protection and confidentiality between the SIP-PBX and the SSP, e.g., using TLS as specified in <a class='info' href='#RFC3261'>[RFC3261]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a>.
 </p>
-<p>REQ15 - The mechanism MUST support authentication of the SIP-PBX by the SSP and vice versa.
+<p>REQ15 - The mechanism MUST support authentication of the SIP-PBX by the SSP and vice versa, e.g., using SIP digest authentication plus TLS server authentication as specified in <a class='info' href='#RFC3261'>[RFC3261]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a>.
 </p>
 <p>REQ16 - The mechanism MUST allow the SIP-PBX to provide its UAs with public or temporary Globally Routable UA URIs (GRUUs) <a class='info' href='#RFC5627'>[RFC5627]<span> (</span><span class='info'>Rosenberg, J., &ldquo;Obtaining and Using Globally Routable User Agent URIs (GRUUs) in the Session Initiation Protocol (SIP),&rdquo; October&nbsp;2009.</span><span>)</span></a>.
 </p>
