draft-ietf-vcarddav-birth-death-extensions-02

--- a/draft-ietf-vcarddav-birth-death-extensions-02.html
+++ b/draft-ietf-vcarddav-birth-death-extensions-02.html
@@ -395,8 +395,8 @@
 <td class="right">Huawei Technologies</td>
 </tr>
 <tr>
-<td class="left">Expires: March 17, 2012</td>
-<td class="right">September 14, 2011</td>
+<td class="left">Expires: May 26, 2012</td>
+<td class="right">November 23, 2011</td>
 </tr>
 
     	
@@ -404,7 +404,7 @@
   </table>
 
   <p class="title">vCard Format Extensions : place of birth, place and date of death <br />
-  <span class="filename">draft-ietf-vcarddav-birth-death-extensions-01</span></p>
+  <span class="filename">draft-ietf-vcarddav-birth-death-extensions-02</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The base vCard 4.0 specification defines a large number of properties, including date of birth.  This specification adds three new properties to vCard 4.0, for place of birth, place of death, and date of death.  </p>
@@ -414,7 +414,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 17, 2012.</p>
+<p>This Internet-Draft will expire on May 26, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -495,11 +495,11 @@
 <dd style="margin-left: 4">
 <dl>
 <dt>BIRTHPLACE-param =</dt>
-<dd style="margin-left: 4">"VALUE=" / ("text" / "uri") </dd>
+<dd style="margin-left: 4">"VALUE=" ("text" / "uri") </dd>
 <dt>BIRTHPLACE-value =</dt>
 <dd style="margin-left: 4">text / uri </dd>
 <dt></dt>
-<dd style="margin-left: 4">; Value and parameter MUST match.  <br><br>
+<dd style="margin-left: 4">; Value type and VALUE parameter MUST match.  <br><br>
 </dd>
 <dt>BIRTHPLACE-param =/</dt>
 <dd style="margin-left: 4">altid-param / language-param / any-param </dd>
@@ -546,11 +546,11 @@
 <dd style="margin-left: 4">
 <dl>
 <dt>DEATHPLACE-param =</dt>
-<dd style="margin-left: 4">"VALUE=" / ("text" / "uri") </dd>
+<dd style="margin-left: 4">"VALUE=" ("text" / "uri") </dd>
 <dt>DEATHPLACE-value =</dt>
 <dd style="margin-left: 4">text / uri </dd>
 <dt></dt>
-<dd style="margin-left: 4">; Value and parameter MUST match.  <br><br>
+<dd style="margin-left: 4">; Value type and VALUE parameter MUST match.  <br><br>
 </dd>
 <dt>DEATHPLACE-param =/</dt>
 <dd style="margin-left: 4">altid-param / language-param / any-param </dd>
@@ -560,7 +560,7 @@
 </dd>
 <dt>Examples:</dt>
 <dd style="margin-left: 4">
-<br> DEATHPLACE:Aboard the Titanic\, near Newfoundland <br> DEATHPLACE;VALUE=uri:http://example.com/ships/titanic.vcf <br> DEATHPLACE;VALUE=uri:41.731944,-49.945833 </dd>
+<br> DEATHPLACE:Aboard the Titanic\, near Newfoundland <br> DEATHPLACE;VALUE=uri:http://example.com/ships/titanic.vcf <br> DEATHPLACE;VALUE=uri:geo:41.731944,-49.945833 </dd>
 </dl>
 
 <p> </p>
@@ -590,8 +590,7 @@
 <dd style="margin-left: 4">VALUE, CALSCALE, LANGUAGE <br>CALSCALE can only be present when the value is a <br>date-and-or-time value and actually contains a date or date-time.  <br>LANGUAGE can only be present when the value is text.  <br><br>
 </dd>
 <dt>Description:</dt>
-<dd style="margin-left: 4">
-<br><br>
+<dd style="margin-left: 4">The presence of a DEATHDATE property indicates that the subject of the vCard is known to be dead.  The absence of this property makes no statement one way or the other.  <br><br>
 </dd>
 <dt>Format definition:</dt>
 <dd style="margin-left: 4">
@@ -601,15 +600,16 @@
 <dt>DEATHDATE-value =</dt>
 <dd style="margin-left: 4">date-and-or-time / text </dd>
 <dt></dt>
-<dd style="margin-left: 4">; Value and parameter MUST match.  <br><br>
+<dd style="margin-left: 4">; Value type and VALUE parameter MUST match.  <br><br>
 </dd>
 <dt>DEATHDATE-param-date =</dt>
-<dd style="margin-left: 4">"VALUE=date-and-or-time" </dd>
-<dt>DEATHDATE-param-text =</dt>
+<dd style="margin-left: 4">"VALUE=date-and-or-time" / calscale-param <br>; calscale-param can only be present when DEATHDATE-value is <br>; date-and-or-time and actually contains a date or date-time.  <br><br>
+</dd>
+<dt>DEATHDATE-param-date =</dt>
 <dd style="margin-left: 4">"VALUE=text" / language-param <br><br>
 </dd>
 <dt>DEATHDATE-param =/</dt>
-<dd style="margin-left: 4">altid-param / calscale-param / any-param <br>; calscale-param can only be present when DEATHDATE-value is <br>; date-and-or-time and actually contains a date or date-time.  </dd>
+<dd style="margin-left: 4">altid-param / any-param </dd>
 </dl>
 <p> </p>
 <br><br>
