draft-josefsson-pbkdf2-test-vectors-05

--- a/draft-josefsson-pbkdf2-test-vectors-05.html
+++ b/draft-josefsson-pbkdf2-test-vectors-05.html
@@ -155,7 +155,7 @@
 <tr><td class="header">Intended status: Informational</td><td class="header">August 16, 2010</td></tr>
 <tr><td class="header">Expires: February 17, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />PKCS #5 Password Based Key Derivation Function 2 (PBKDF2) Test Vectors<br />draft-josefsson-pbkdf2-test-vectors-04</h1>
+<h1><br />PKCS #5 Password Based Key Derivation Function 2 (PBKDF2) Test Vectors<br />draft-josefsson-pbkdf2-test-vectors-05</h1>
 
 <h3>Abstract</h3>
 
@@ -342,7 +342,9 @@ Copying conditions</h3>
 <a name="rfc.section.5"></a><h3>5.&nbsp;
 Security Considerations</h3>
 
-<p>None.
+<p>The security considerations in <a class='info' href='#RFC2898'>[RFC2898]<span> (</span><span class='info'>Kaliski, B., &ldquo;PKCS #5: Password-Based Cryptography Specification Version 2.0,&rdquo; September&nbsp;2000.</span><span>)</span></a>
+	    apply.  This document does not introduce any new security
+	    considerations.
 </p>
 <a name="anchor3"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
