draft-ietf-roll-of0-19

--- a/draft-ietf-roll-of0-19.html
+++ b/draft-ietf-roll-of0-19.html
@@ -416,7 +416,7 @@
   </table>
 
   <p class="title">RPL Objective Function Zero<br />
-  <span class="filename">draft-ietf-roll-of0-18</span></p>
+  <span class="filename">draft-ietf-roll-of0-19</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The Routing Protocol for Low Power and Lossy Networks (RPL) specification defines a generic Distance Vector protocol that is adapted to a variety of networks types by the application of specific Objective Functions (OFs).  An OF states the outcome of the process used by a RPL node to select and optimize routes within a RPL Instance based on the information objects available; an OF is not an algorithm.</p>
@@ -490,7 +490,7 @@
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <p><a href="#I-D.ietf-roll-rpl">The Routing Protocol for Low Power and Lossy Networks (RPL) </a> <cite title="NONE">[I-D.ietf-roll-rpl]</cite>specification defines a generic Distance Vector protocol that is adapted to a variety of Low Power and Lossy Networks (LLN) types by the application of specific Objective Functions (OFs).  </p>
-<p id="rfc.section.1.p.2">An OF states the outcome of the process used by a RPL node to select and optimize routes within a RPL Instance based on the information objects available; an OF is not an algorithm. For example, "shortest path first" is an algorithm where the least cost path between two points is derived as an outcome; there are a number of algorithms that can be used to satisfy the OF, of which the well-known Dijkstra algorithm is an example.  </p>
+<p id="rfc.section.1.p.2">A RPL OF states the outcome of the process used by a RPL node to select and optimize routes within a RPL Instance based on the information objects available. As a general concept, an OF is not an algorithm.  For example outside RPL, "shortest path first" is an OF where the least cost path between two points is derived as an outcome; there are a number of algorithms that can be used to satisfy the OF, of which the well-known Dijkstra algorithm is an example.  </p>
 <p id="rfc.section.1.p.3">The separation of OFs from the core protocol specification allows RPL to be adapted to meet the different optimization criteria required by the wide range of deployments, applications, and network designs.  </p>
 <p id="rfc.section.1.p.4">RPL forms Directed Acyclic Graphs (DAGs) as collections of Destination Oriented DAGs (DODAGs) within instances of the protocol.  Each instance is associated with a specialized Objective Function. A DODAG is periodically reconstructed as a new DODAG Version to enable a global reoptimization of the graph.</p>
 <p id="rfc.section.1.p.5">An instance of RPL running on a device uses an Objective Function to help it determine which DODAG and which Version of that DODAG it should join. The OF is also used by the RPL instance to select a number of routers within the DODAG current and subsequent Versions to serve as parents or as feasible successors.</p>
@@ -537,7 +537,8 @@
 <ol>
 <li>
 <a href="#I-D.ietf-roll-rpl">[I-D.ietf-roll-rpl]</a> section 8 spells out the generic rules for a node to re-parent and in particular the boundaries to augment its Rank within a DODAG Version.  A candidate that would not satisfy those rules MUST NOT be considered.</li>
-<li>An implementation SHOULD validate a router prior to selecting it as preferred.In most cases, a router that does not succeed the validation process can not be further considered for selection as preferred parent. In any case a router that succeeded that validation process SHOULD be preferred.</li>
+<li>An implementation SHOULD validate a router prior to selecting it as preferred. In most cases, a router that does not succeed the validation process can not be further considered for selection as preferred parent. In any case a router that succeeded that validation process SHOULD be preferred.</li>
+<li>When multiple interfaces are available, a policy might be locally configured to order them and that policy applies first; that is a router on a higher order interface in the policy is preferable.</li>
 <li>If the administrative preference of the root is configured to supersede the goal to join a Grounded DODAG, a router that offers connectivity to a more preferable root SHOULD be preferred.</li>
 <li>A router that offers connectivity to a grounded DODAG Version SHOULD be preferred over one that does not.</li>
 <li>A router that offers connectivity to a more preferable root SHOULD be preferred.</li>
