draft-mrw-nat66-16

--- a/draft-mrw-nat66-16.html
+++ b/draft-mrw-nat66-16.html
@@ -434,12 +434,12 @@
 <td class="right">F.J. Baker</td>
 </tr>
 <tr>
-<td class="left">Expires: October 27, 2011</td>
+<td class="left">Expires: October 28, 2011</td>
 <td class="right">Cisco Systems</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">April 25, 2011</td>
+<td class="right">April 26, 2011</td>
 </tr>
 
     	
@@ -447,7 +447,7 @@
   </table>
 
   <p class="title">IPv6-to-IPv6 Network Prefix Translation<br />
-  <span class="filename">draft-mrw-nat66-15</span></p>
+  <span class="filename">draft-mrw-nat66-16</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes a stateless, transport-agnostic IPv6-to-IPv6 Network Prefix Translation (NPTv6) function that provides the address independence benefit associated with IPv4-to-IPv4 NAT (NAPT44), and in addition provides a 1:1 relationship between addresses in the "inside" and "outside" prefixes, preserving end to end reachability at the network layer.</p>
@@ -457,7 +457,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 27, 2011.</p>
+<p>This Internet-Draft will expire on October 28, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -574,7 +574,7 @@
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <p id="rfc.section.1.p.1">This document describes a stateless IPv6-to-IPv6 Network Prefix Translation (NPTv6) function, designed to provide address independence to the edge network. It is transport-agnostic with respect to transports that don't checksum the IP header, such as SCTP, and to transports that use the TCP/UDP/DCCP pseudo-header and <a href="#RFC1071">checksum</a> <cite title="NONE">[RFC1071]</cite>.</p>
-<p id="rfc.section.1.p.2">Note that, for reasons discussed in <a href="#RFC2993">[RFC2993]</a> and <a href="#application">Section 5</a>, the IETF does not generally recommend the use of Network Address Translation technology for IPv6. Where Network Address Translation is implemented, however, this specification provides a mechanism that has less architectural problems than merely implementing a traditional IPv4 NAT in an IPv6 environment. Some problems remain, however, and the reader should consult Section 5, <a href="#RFC4864">[RFC4864]</a>, and <a href="#RFC5902">[RFC5902]</a>, for the implications and approaches that help avoid all types of NATs.  </p>
+<p id="rfc.section.1.p.2">For reasons discussed in <a href="#RFC2993">[RFC2993]</a> and <a href="#application">Section 5</a>, the IETF does not recommend the use of Network Address Translation technology for IPv6. Where translation is implemented, however, this specification provides a mechanism that has less architectural problems than merely implementing a traditional stateful Network Address Translator in an IPv6 environment. It also provides a useful alternative to the complexities and costs imposed by multihoming using provider-independent addressing, and the routing and network management issues of overlaid ISP address space. Some problems remain, however. The reader should consider the alternatives suggested in <a href="#RFC4864">[RFC4864]</a>, and the considerations of <a href="#RFC5902">[RFC5902]</a>, for improved approaches.</p>
 <p id="rfc.section.1.p.3">The stateless approach described in this document has several ramifications: </p>
 
 <ul>
