draft-ietf-krb-wg-anon-12

--- a/draft-ietf-krb-wg-anon-12.html
+++ b/draft-ietf-krb-wg-anon-12.html
@@ -156,9 +156,9 @@
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc4120'>4120</a>, <a href='http://tools.ietf.org/html/rfc4121 and 4556'>4121 and 4556</a></td><td class="header">Microsoft Corporation</td></tr>
 <tr><td class="header">(if&nbsp;approved)</td><td class="header">S. Hartman</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">Painless Security</td></tr>
-<tr><td class="header">Expires: December 31, 2010</td><td class="header">June 29, 2010</td></tr>
+<tr><td class="header">Expires: March 3, 2011</td><td class="header">August 30, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Anonymity Support for Kerberos<br />draft-ietf-krb-wg-anon-11</h1>
+<h1><br />Anonymity Support for Kerberos<br />draft-ietf-krb-wg-anon-12</h1>
 
 <h3>Abstract</h3>
 
@@ -185,7 +185,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 31, 2010.</p>
+This Internet-Draft will expire on March 3, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -818,6 +818,8 @@ References</h3>
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>11.1.&nbsp;Normative References</h3>
 <table width="99%" border="0">
+<tr><td class="author-text" valign="top"><a name="ASAX34">[ASAX34]</a></td>
+<td class="author-text">American Standards Institute, &ldquo;American Standard Code for Information Interchange,&rdquo; ASA&nbsp;X3.4-1963, June&nbsp;1963.</td></tr>
 <tr><td class="author-text" valign="top"><a name="KRBNAM">[KRBNAM]</a></td>
 <td class="author-text">Zhu, L., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-krb-wg-naming.txt">Additional Kerberos Naming Constraints</a>,&rdquo; draft-ietf-krb-wg-naming (work in progress), 2008.</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC1964">[RFC1964]</a></td>
